# GSP

./: README.md  README.txt  TODO  TODO.md
GSP/: README.txt
GSP/GSPFramework/: TODO  c-pipeline.xml  commands  java-pipeline.xml  nbactions.xml  pom.xml  region-learner-test.xml  striplet-test-no-view.xml  striplet-test-with-view.xml
GSP/GSPFramework/CModuleDemo/: Main.java  demo.cpp  demo.h
GSP/GSPFramework/CModuleFeasibilityStudy/: Makefile  adder.cpp  adder.h  framework.c  framework.h
GSP/GSPFramework/jnaerator/: deploy.sh  install.sh
GSP/GSPFramework/pipeline-viewer/: Makefile  view-pipeline.sh  view-pipeline.xsl  view-pipeline.xxsl
GSP/GSPFramework/src/main/java/fr/prima/gsp/: Main.java
GSP/GSPModule/: CMakeLists.txt  CatadioptricCubeMap.cpp  CatadioptricCubeMap.hpp  CubeMapModule.cpp  CubeMapModule.hpp  GLModule.cpp  GLModule.hpp  GTKModule.hpp  ImageLoader.cpp  ImageLoader.hpp  ImageViewer.cpp  ImageViewer.hpp  LadybugCubeMap.cpp  LadybugCubeMap.hpp  OmniViewCatadioptric.cpp  OmniViewLadybug.cpp  OmniViewLadybug.hpp  RawToIpl.hpp  ServiceVideoModule.cpp  ServiceVideoModule.hpp  SpericMap.hpp  TestGLModule.cpp  framework.h  testCatadiotric.xml  testGL.xml  testLadybug.xml  view-image.xml
GSP/GSPModule/CMake/: FindOmiscid.cmake
GSP/GSPModule/Detectors/: CMakeLists.txt  Detector.cpp  Detector.hpp  DetectorService.cpp  DetectorService.hpp  HistoColorDetector.cpp  HistoColorDetector.hpp  ROIExtend.cpp  ROIExtend.hpp
GSP/PipelineViewer/: view-pipeline.xxsl
GSPBaseutils/: pom.xml
GSPBaseutils/src/main/java/fr/prima/gspbaseutils/: CharPointerToString.java  Clock.java  Console.java  DebugGUI.java  FloatPointerToFloatArray.java  FloatPointerToFloatBuffer.java  For.java  GC.java  GroupingBuffer.java  IntPointerToIntArray.java  IntPointerToIntBuffer.java  JMX.java  LazyThreadedBuffer.java  ReferenceQueue.java  StopWatch.java  StopWatchOld.java  StringToCharPointer.java  Timestamper.java
GSPBaseutils/src/test/java/fr/prima/gspbaseutils/: AppTest.java
GSPExample/: .gitignore  CMakeLists.txt  README  TODO  benchmark-cpp.xml  benchmark-java.xml  pipeline-c-1.xml  pipeline-c-2.xml  pipeline-cpp-1.xml  pipeline-cpp-2.xml  pipeline-cpp-3-with-param.xml  pipeline-cpp-4-emit-object.xml  pipeline-cpp-5-subclassing.xml  pipeline-cpp-6-stl.xml  pipeline-cpp-7-custom-type.xml  pipeline-pure-java-1.xml  pipeline-pure-java-2.xml  pipeline-pure-java-3.xml  pipeline-pure-java-4.xml  pipeline-pure-java-5-with-param.xml  pipeline-pure-java-6-factory.xml  pipeline-python-1.xml  pipeline-python-2.xml  pipeline-python-3-with-cpp.xml  pipeline-python-4-cpp-namespace.xml  pipeline-python-5-simpletypes.xml  pipeline-python-6-parameters.xml  pipeline-standard-1.xml  pipeline-test-double.xml  pipeline-test-doublecpp.xml
GSPExample/c/: CMakeLists.txt  NativeCDemo.c
GSPExample/cpp/: AdvancedDemo.cpp  AdvancedDemo.h  CMakeLists.txt  NativeCppDemo.cpp  NativeCppDemo.h  Subclassing.cpp  Subclassing.h  framework.h
GSPExample/error/: README.md  cpp-missing-class.xml  cpp-missing-library.xml  cpp-missing-param.xml  cpp-wrong-param.xml  generic-duplicate-namespace.xml  generic-unreplaced-variable.xml  java-missing-param-and-duplicate-name.xml  java-missing-type.xml  java-wrong-param.xml  python-missing-class.xml  python-missing-file.xml  python-missing-param.xml  python-wrong-param-type.xml
GSPExample/java/: CMakeLists.txt  FindJava.cmake  README-COMPILE  UseJava.cmake
GSPExample/java/fr/prima/gspexample/: CharPointerToString.java  Console.java  Counter.java  MessageAtInit.java  Square.java
GSPExample/python/: pythoncpp.py  pythondemo.py
GSPFramework/: .gitignore  TODO  bridj-binaries.zip.txt  nbactions.xml  pipeline-simple-with-parameter.xml  pom.xml  view-image.xml
GSPFramework/CModuleDemo/: Makefile  framework.h
GSPFramework/OldCDemo/: demo.h
GSPFramework/cpp-mangling/: CMakeLists.txt  ManySymbols.cpp  js  sizes.c  test.js
GSPFramework/jnaerator/: README  generate-vlfeat.sh  generate.sh
GSPFramework/src/main/java/com/bridj/: Demangler.java  Pointable.java
GSPFramework/src/main/java/com/bridj/ann/: Virtual.java
GSPFramework/src/main/java/com/bridj/cpp/: GCC4Demangler.java
GSPFramework/src/main/java/fr/prima/gsp/: Launcher.java  Main.java  Option.java  Utils.java
GSPFramework/src/main/java/org/bridj/demangling/: BridjDemanglerExportTools.java  GCC4Demangler.java
GSPFramework/src/main/resources/: gsp.py
GSPFramework/src/main/xsd/: pipeline.xsd
GSPFramework/src/test/java/fr/prima/gsp/: AppTest.java
GSPFramework/src/test/java/fr/prima/vsp/: AppTest.java
GSPModule/: .gitignore  CMakeLists.txt  CatadioptricCubeMap.cpp  ColorAnalyser.cpp  ColorAnalyser.hpp  ColorFilter.cpp  ColorFilter.hpp  ColorSeqDetector.cpp  ColorSeqDetector.hpp  CubeMapModule.cpp  GLModule.hpp  GTKModule.cpp  GaussianFilter.cpp  GaussianFilter.hpp  ImageSource.cpp  ImageSource.hpp  ImageViewer.cpp  ImageViewer.hpp  LadybugCubeMap.cpp  OmiscidVideoGrabber.cpp  OmiscidVideoGrabber.hpp  OmniView.cpp  OmniView.hpp  OmniViewCatadioptric.hpp  RawToIpl.cpp  SphericMap.cpp  SphericMap.hpp  TestGLModule.hpp  colorSeqDetector.xml  framework.h  histo.xml  pipeline-test-imagesource.xml  pipeline-test-view-image-1-sec.xml  start-helper.sh  testCatadiotric.xml  testGL.xml  testLadybug.xml  view-image.xml  view-video.xml
GSPModule/Base/: CMakeLists.txt  CatadioptricCubeMap.cpp  CatadioptricCubeMap.hpp  ColorConvertor.cpp  ColorConvertor.hpp  CubeMapModule.hpp  GLModule.cpp  GTKModule.cpp  GTKModule.hpp  ImageLoader.cpp  ImageSource.hpp  LadybugCubeMap.cpp  LadybugCubeMap.hpp  ServiceVideoModule.hpp  SphericMap.cpp  SphericMap.hpp  TestGLModule.cpp
GSPModule/CMake/: FindGLEW.cmake  FindOmiscid.cmake  FindOpenCV.cmake
GSPModule/Detectors/: CMakeLists.txt  DetectorService.cpp  DetectorService.hpp  Histo.cpp  Histo.hpp  HistoDetector.cpp  HistoDetector.hpp  HistogramBuilder.cpp  HistogramBuilder.hpp  ROIExtend.hpp  build_histo.xml  histo.xml
PipelineViewer/: view-pipeline.sh  view-pipeline.xsl  view-pipeline.xxsl
PipelineViewer/test/: ll-pipeline.xml
(+162 files in other folders)
